--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -1,9 +1,9 @@
-<section class="timeline-section">
-  <div class="timeline-items">
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <div class="timeline-date">Date 1</div>
-      <div class="timeline-content">
+<section class="planning-section">
+  <div class="planning-items">
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Date 1</div>
+      <div class="planning-content">
         <h3>Location 1</h3>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -18,10 +18,10 @@
         </p>
       </div>
     </div>
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <div class="timeline-date">Date 2</div>
-      <div class="timeline-content">
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Date 2</div>
+      <div class="planning-content">
         <h3>Location 2</h3>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
