feat: improve planning and  hostels available feature

--- a/src/app/layout/pages/logements/logements.component.html
+++ b/src/app/layout/pages/logements/logements.component.html
@@ -1,26 +1,26 @@
 <section class="logements-section">
   <div class="logements-items">
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://rives-nature.com')">
       <div class="logements-item-image rives-nature"></div>
       <h3>Rive Nature</h3>
     </div>
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://www.relaisdesarcandiers.fr')">
       <div class="logements-item-image relais-des-arcandiers"></div>
       <h3>Le relais des arcandiers</h3>
     </div>
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://www.chambres-d-hotes-caharet.fr')">
       <div class="logements-item-image chambre-hotes-cahardet"></div>
       <h3>Chambre d'hôtes de Cahardet</h3>
     </div>
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://www.gites.fr/gites_gite-des-hirondelles_pipriac_h893200.htm')">
       <div class="logements-item-image gite-des-hirondelles"></div>
       <h3>Gîte des Hirondelles</h3>
     </div>
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://www.leclosduchene.fr')">
       <div class="logements-item-image clos-du-chene"></div>
       <h3>Le clos du chêne</h3>
     </div>
-    <div class="logements-item">
+    <div class="logements-item" (click)="openLink('https://www.lebrossay.fr')">
       <div class="logements-item-image chateau-du-brossay"></div>
       <h3>Chateau Le Brossay</h3>
     </div>
