--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -2,37 +2,71 @@
   <div class="planning-items">
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Date 1</div>
+      <div class="planning-date">Vendredi 02 septembre 2022 - 18 heures</div>
       <div class="planning-content">
-        <h3>Location 1</h3>
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+          Accueil des invités
         </p>
       </div>
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Date 2</div>
+      <div class="planning-date">Samedi 03 septembre 2022 - 14 heures</div>
       <div class="planning-content">
-        <h3>Location 2</h3>
+        <h3>Presbytère de Saint-Briac-sur-Mer</h3>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+          Cérémonie civile
+        </p>
+      </div>
+    </div>
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Samedi 03 septembre 2022 - 16 heures</div>
+      <div class="planning-content">
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
+        <p>
+          Cérémonie laïque
+        </p>
+      </div>
+    </div>
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Samedi 03 septembre 2022 - 17 heures</div>
+      <div class="planning-content">
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
+        <p>
+          Cocktail
+        </p>
+      </div>
+    </div>
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Samedi 03 septembre 2022 - 20 heures</div>
+      <div class="planning-content">
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
+        <p>
+          Dîner
+        </p>
+      </div>
+    </div>
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Dimanche 04 septembre 2022 - 12 heures</div>
+      <div class="planning-content">
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
+        <p>
+          Brunch, Olympiades & Pool party
+        </p>
+      </div>
+    </div>
+    <div class="planning-item">
+      <div class="planning-dot"></div>
+      <div class="planning-date">Dimanche 04 septembre 2022 - 09 heures</div>
+      <div class="planning-content">
+        <h3>Manoir de la Perdrilais de Pipriac</h3>
+        <p>
+          Détente jusqu'à 12 heures
         </p>
       </div>
     </div>
