fix: planning item title responsive issue

--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -2,7 +2,7 @@
   <div class="planning-items">
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Vendredi 02 septembre 2022 - 18 heures</div>
+      <div class="planning-date">02/09/2022 - 18:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
@@ -12,7 +12,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Samedi 03 septembre 2022 - 14 heures</div>
+      <div class="planning-date">03/09/2022 - 14:00</div>
       <div class="planning-content">
         <h3>Presbytère de Saint-Briac-sur-Mer</h3>
         <p>
@@ -22,7 +22,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Samedi 03 septembre 2022 - 16 heures</div>
+      <div class="planning-date">03/09/2022 - 16:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
@@ -32,7 +32,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Samedi 03 septembre 2022 - 17 heures</div>
+      <div class="planning-date">03/09/2022 - 17:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
@@ -42,7 +42,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Samedi 03 septembre 2022 - 20 heures</div>
+      <div class="planning-date">03/09/2022 - 20:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
@@ -52,7 +52,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Dimanche 04 septembre 2022 - 12 heures</div>
+      <div class="planning-date">04/09/2022 - 12:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
@@ -62,7 +62,7 @@
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">Dimanche 04 septembre 2022 - 09 heures</div>
+      <div class="planning-date">04/09/2022 - 09:00</div>
       <div class="planning-content">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
