fix: multiple fix and features

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -7,7 +7,20 @@
     <nav class="menu-navbar">
       <ul>
         <li>
+          <a
+            [routerLink]="['']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Accueil</a
+          >
+        </li>
+        <li>
           <a [routerLink]="['/planning']" routerLinkActive="active">Planning</a>
+        </li>
+        <li>
+          <a [routerLink]="['/covoiturages']" routerLinkActive="active"
+            >Covoiturages</a
+          >
         </li>
         <li>
           <a [routerLink]="['/logements']" routerLinkActive="active"
@@ -16,9 +29,34 @@
         </li>
       </ul>
     </nav>
-    <button class="menu-button" (click)="this.toggleMenu()">
-      <div class="menu-button-icon" [class.opened]="menuOpened"></div>
-    </button>
+    <nav class="menu-navbar-alt">
+      <ul>
+        <li>
+          <a
+            [routerLink]="['']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            <span class="zmdi zmdi-home"></span>
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['/planning']" routerLinkActive="active">
+            <span class="zmdi zmdi-calendar"></span>
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['/covoiturages']" routerLinkActive="active">
+            <span class="zmdi zmdi-car-taxi"></span>
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['/logements']" routerLinkActive="active"
+            ><span class="zmdi zmdi-hotel"></span
+          ></a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </header>
 <router-outlet></router-outlet>
