--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -50,97 +50,38 @@
             color: #006338;
             &.active {
               font-weight: bold;
+              color: #b36700;
+              border-bottom: 2px solid #b36700;
+              padding-bottom: 5px;
             }
           }
         }
       }
     }
-    .menu-button {
+    .menu-navbar-alt {
       @media (min-width: 769px) {
         display: none;
       }
-      background-color: transparent;
-      border: none;
-      .menu-button-icon {
-        display: block;
-        width: 24px;
-        height: 24px;
-        cursor: pointer;
-        border-radius: 0px;
-        margin: 15% auto;
-        -webkit-transition: all 0.3s ease, -webkit-transform 0.3s ease;
-        transition: all 0.3s ease, transform 0.3s ease;
-        background: -webkit-linear-gradient(
-            top,
-            transparent 0%,
-            transparent 20%,
-            #006338 20%,
-            #006338 26%,
-            transparent 23%,
-            transparent 48%,
-            #006338 48%,
-            #006338 52%,
-            transparent 47%,
-            transparent 76%,
-            #006338 76%,
-            #006338 80%,
-            transparent 78%
-          ),
-          -webkit-linear-gradient(transparent, transparent);
-        background: linear-gradient(
-            to bottom,
-            transparent 0%,
-            transparent 20%,
-            #006338 20%,
-            #006338 26%,
-            transparent 23%,
-            transparent 48%,
-            #006338 48%,
-            #006338 52%,
-            transparent 47%,
-            transparent 76%,
-            #006338 76%,
-            #006338 80%,
-            transparent 78%
-          ),
-          linear-gradient(transparent, transparent);
-        &.opened {
-          background: -webkit-linear-gradient(
-              135deg,
-              transparent 0%,
-              transparent 48%,
-              #006338 49%,
-              #006338 53%,
-              transparent 53%,
-              transparent 100%
-            ),
-            -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, #006338
-                  49%, #006338 53%, transparent 53%, transparent 100%);
-          background: linear-gradient(
-              -45deg,
-              transparent 0%,
-              transparent 48%,
-              #006338 49%,
-              #006338 53%,
-              transparent 53%,
-              transparent 100%
-            ),
-            linear-gradient(
-              45deg,
-              transparent 0%,
-              transparent 48%,
-              #006338 49%,
-              #006338 53%,
-              transparent 53%,
-              transparent 100%
-            );
-          -webkit-transform: rotate(-90deg);
-          -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+      ul {
+        display: flex;
+        list-style: none;
+        justify-content: space-between;
+        li {
+          margin-left: 30px;
+          a {
+            text-decoration: none;
+            color: #006338;
+            font-size: 25px;
+            &.active {
+              font-weight: bold;
+              color: #b36700;
+              @media (min-width: 769px) {
+                border-bottom: 2px solid #b36700;
+                padding-bottom: 5px;                
+              }
+            }
+          }
         }
-      }
-      &:hover {
-        cursor: pointer;
       }
     }
   }
