--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   padding: 0px 15px;
   align-items: center;
-  border-bottom: 2px solid #ffffd4;
+  border-bottom: 2px solid #b36700;
   .logo {
     .logo-title {
       @media (max-width: 768px) {
