--- a/src/app/layout/pages/restaurants/restaurants.component.html
+++ b/src/app/layout/pages/restaurants/restaurants.component.html
@@ -1,1 +1,28 @@
-<section></section>
+<section class="restaurants-section">
+    <div class="restaurants-items">
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d2367854-Reviews-Creperie_L_Hermine-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image creperie-hermine"></div>
+          <h3>Crêperie l'Hermine</h3>
+        </div>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d14134041-Reviews-La_Table_Du_Bechet-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image table-bechet"></div>
+          <h3>La Table du Bechet</h3>
+        </div>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d6527858-Reviews-Le_Rusty-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image rusty"></div>
+          <h3>Le Rusty</h3>
+        </div>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d3254531-Reviews-Le_Surf_de_Josephine-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image surf-josephine"></div>
+          <h3>Le Surf de Joséphine</h3>
+        </div>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d8380398-Reviews-Bistrot_de_la_Houle-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image bistrot-houle"></div>
+          <h3>Bistrot de la Houle</h3>
+        </div>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d7381639-Reviews-La_Ville_Carree-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image ville-carree"></div>
+          <h3>La ville carrée</h3>
+        </div>
+      </div>
+</section>
