--- a/src/app/layout/pages/restaurants/restaurants.component.scss
+++ b/src/app/layout/pages/restaurants/restaurants.component.scss
@@ -1,4 +1,122 @@
-section {
-    background-color: #383838;
-    min-height: calc(100vh - 72px);
+.restaurants-section {
+  background-color: #383838;
+  min-height: calc(100vh - 112px);
+  padding: 20px;
+  .restaurants-items {
+    display: grid;
+    grid-gap: 30px;
+    .restaurants-item {
+      min-height: 210px;
+      h3 {
+        text-align: center;
+        font-family: "Tangerine", cursive;
+        margin: 0;
+        background-color: #ffffd4;
+        font-weight: 500;
+        font-size: 25px;
+        padding: 7px 0px;
+        color: #006338;
+      }
+      .restaurants-item-image {
+        &.creperie-hermine {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/creperie-hermine.jpg");
+        }
+        &.table-bechet {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/table-bechet.jpg");
+        }
+        &.rusty {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/rusty.jpg");
+        }
+        &.surf-josephine {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/surf-josephine.jpg");
+        }
+        &.bistrot-houle {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/bistrot-houle.jpg");
+        }
+        &.ville-carree {
+          background-image: radial-gradient(
+              ellipse at center,
+              rgba(0, 0, 0, 0) 0%,
+              rgba(0, 0, 0, 0) 23%,
+              rgba(0, 0, 0, 0.65) 100%
+            ),
+            url("/assets/ville-carree.jpg");
+        }
+        /* Set a specific height */
+        height: calc(100% - 27px);
+        /* Position and center the image to scale nicely on all screens */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      &:hover {
+        cursor: pointer;
+        h3 {
+          background-color: #b36700;
+          color: #ffffd4;
+        }
+        .creperie-hermine {
+          background-image: url("/assets/creperie-hermine-hover.jpg");
+        }
+        .table-bechet {
+          background-image: url("/assets/table-bechet-hover.jpg");
+        }
+        .rusty {
+          background-image: url("/assets/rusty-hover.jpg");
+        }
+        .surf-josephine {
+          background-image: url("/assets/surf-josephine-hover.jpg");
+        }
+        .bistrot-houle {
+          background-image: url("/assets/bistrot-houle-hover.jpg");
+        }
+        .ville-carree {
+          background-image: url("/assets/ville-carree-hover.jpg");
+        }
+      }
+    }
+  }
+}
+/* Screen larger than 600px? 2 column */
+@media (min-width: 600px) {
+  .restaurants-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Screen larger than 900px? 3 columns */
+@media (min-width: 900px) {
+  .restaurants-items {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
